@@ -4,6 +4,8 @@ Changes
 1.0.19 (?)
 ----------
 
+- Do not set GDAL_DATA and PROJ_LIB when data files can be found at their built
+  in locations (#1631).
 - Add linear_units property to CRS (#1638).
 - Ensure that AWS_NO_SIGN_REQUESTS is sufficient for accessing public S3
   datasets and that import of boto3 is not required (#1637).
